[M142] [ntp-realbox] Ensure error scrim is visible in compact mode
Original change's description:
> [ntp-realbox] Ensure error scrim is visible in compact mode
> 
> https://screencast.googleplex.com/cast/NTczOTI4MDQxNTU4ODM1MnxkYWM5MzM0Zi0yMQ
> 
> Fixed: 450843693
> Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7032066
> Commit-Queue: Hannah Collins <hannahrogers@google.com>
> Cr-Commit-Position: refs/heads/main@{#1528133}

(cherry picked from commit 2c869f9e3130fa817d2f04269da6f152b4639d45)

Bug: 452485790,450843693
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7052245
Auto-Submit: Chrome Cherry Picker <chrome-cherry-picker@chops-service-accounts.iam.gserviceaccount.com>
Commit-Queue: Rubber Stamper <rubber-stamper@appspot.gserviceaccount.com>
Bot-Commit: Rubber Stamper <rubber-stamper@appspot.gserviceaccount.com>
Cr-Commit-Position: refs/branch-heads/7444@{#1213}
Cr-Branched-From: 29907d3c18078029695f458b42fb8e6fda3e493d-refs/heads/main@{#1522585}

--- a/ui/webui/resources/cr_components/composebox/error_scrim.css
+++ b/ui/webui/resources/cr_components/composebox/error_scrim.css
@@ -14,7 +14,7 @@
   color: var(--color-new-tab-page-composebox-error-scrim-foreground);
   display: flex;
   font-size: 16px;
-  flex-direction: column;
+  flex-direction: var(--error-scrim-flex-direction, column);
   gap: 12px;
   justify-content: center;
   height: 100%;
